--- a/store.html
+++ b/store.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Thasadith&display=swap" rel="stylesheet">
   <title>Firefits</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Thasadith', sans-serif;
       background-color: black;
       color: white;
       margin: 0;
@@ -13,6 +16,7 @@
 
     /* Header styles */
     header {
+      font-family: 'Thasadith', sans-serif;
       text-align: center;
       background-color: #111;
       padding: 10px;
@@ -20,7 +24,7 @@
 
     header h1 {
       margin: 0;
-      font-size: 28px;
+      font-size: 50px;
     }
 
     /* Navigation styles */
