--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
     <div id="biography">
         <h1>My Biography</h1>
-        <p>I'm a 24 year old monkey living in the forest of South America, life is pretty chill here. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum facilis sit, molestiae quis quos laborum, ab a nostrum, veritatis ratione dolor maxime. Delectus perspiciatis, iusto nihil beatae temporibus nesciunt facilis!</p>
+        <p style="font-size:'30px'; color:'grey'">I'm a 24 year old monkey living in the forest of South America, life is pretty chill here. Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum facilis sit, molestiae quis quos laborum, ab a nostrum, veritatis ratione dolor maxime. Delectus perspiciatis, iusto nihil beatae temporibus nesciunt facilis!</p>
     </div>
     <footer>
         please give me my class participation points
